--- a/src/main/resources/templates/ownerviews/pgview.html
+++ b/src/main/resources/templates/ownerviews/pgview.html
@@ -43,12 +43,14 @@
                                     <td th:text="${pg.floor.size}"></td>
                                 </tr>
                             </table>
-                            <a th:href="@{'/owner/'+${pg.id}+'/'+${pg.name.replace(' ','-')+'/details'}}" class="btn btn-success" target="_blank">Edit</a>
+                            <a th:href="@{'/owner/'+${pg.id}+'/'+${pg.name.replace(' ','-')+'/details'}}"
+                                class="btn btn-success" target="_blank">Edit</a>
                         </div>
                     </div>
 
                     <!-- PG floor and room view -->
                     <div class="card mb-3">
+
                         <div th:if="${pg.floor.size == 0 || pg.floor.size == null}">
                             <div class="container-fluid text-center">
                                 <h3 class="text-danger">You have not added the floor</h3>
@@ -59,13 +61,31 @@
                                 </a>
                             </div>
                         </div>
+
+                        <div th:if="${unalloc != null}">
+                            <h1 class=" text-center text-muted">Unallocated guests list</h1>
+                            <div class="card text-center" style="border-color: red;">
+                                <div class="row">
+                                    <div class="guest col-lg-6 col-sm-6" draggable="true"
+                                        th:each="gst : ${unalloc}">
+                                        <img class="m-2" th:src="${'/image/guest/'+gst.profile}">
+                                        <span
+                                            th:classappend="${gst.paymentStatus ? 'payment-status-true' : 'payment-status-false'}"
+                                            th:text="${gst.name}"></span>
+                                    </div>
+                                </div>
+                                <a th:href="@{'/owner/'+${pg.id}+'/allocate/guest'}" class="btn btn-info mt-3" style="border-radius: 2px;">Allocate</a>
+                            </div>
+                        </div>
+
                         <div th:if="${pg.floor.size > 0 || pg.floor.size != null}" class="card"
                             th:each="flr : ${pg.floor}">
                             <div class="container-fluid text-center">
                                 <h3 class="floor-name" th:text="${'Floor ' + flr.name}"></h3>
                                 <div th:if="${#lists.isEmpty(flr.flat)}">
                                     <p class="text-danger">Flats and rooms are not added</p>
-                                    <a th:href="@{'/owner/'+${pg.id}+'/'+${pg.name.replace(' ','-')}+'/details'}" target="_blank">
+                                    <a th:href="@{'/owner/'+${pg.id}+'/'+${pg.name.replace(' ','-')}+'/details'}"
+                                        target="_blank">
                                         <i class="fa fa-plus fa-2x"></i>
                                     </a>
                                     <!-- <img src="/src/main/resources/static/assests/empty.png" alt=""> -->
@@ -76,7 +96,8 @@
                                         <h3 class="floor-name" th:text="${flt.name}"></h3>
                                         <div th:if="${#lists.isEmpty(flt.room)}">
                                             <p class="text-danger">Rooms are not added</p>
-                                            <a th:href="@{'/owner/'+${pg.id}+'/'+${pg.name.replace(' ','-')}+'/details'}" target="_blank">
+                                            <a th:href="@{'/owner/'+${pg.id}+'/'+${pg.name.replace(' ','-')}+'/details'}"
+                                                target="_blank">
                                                 <i class="fa fa-plus fa-2x"></i>
                                             </a>
                                             <!-- <img src="/src/main/resources/static/assests/empty.png" alt=""> -->
@@ -88,14 +109,15 @@
                                                     <h4 class="floor-name" th:text="${r.name}"></h4>
                                                     <div th:if="${#lists.isEmpty(flt.guest)}">
                                                         <p class="text-danger">Guesets are not avialiable</p>
-                                                        <a th:href="@{'/owner/'+${pg.id}+'/'+${pg.name.replace(' ','-')}+'/details'}" target="_blank">
+                                                        <a th:href="@{'/owner/'+${pg.id}+'/'+${pg.name.replace(' ','-')}+'/details'}"
+                                                            target="_blank">
                                                             <i class="fa fa-plus fa-2x"></i>
                                                         </a>
                                                         <!-- <img src="/src/main/resources/static/assests/empty.png" alt=""> -->
                                                     </div>
                                                     <!-- guest view -->
                                                     <div th:each="gst : ${r.guest}">
-                                                        <div class="room-view row d-flex">
+                                                        <div class="guest row d-flex" draggable="true">
                                                             <img class="m-2" th:src="${'/image/guest/'+gst.profile}">
                                                             <span
                                                                 th:classappend="${gst.paymentStatus ? 'payment-status-true' : 'payment-status-false'}"
@@ -129,7 +151,8 @@
                                             <i class="fa-solid fa-magnifying-glass"></i>
                                         </div>
                                     </div>
-                                    <input onkeyup="search()" id="search-input" type="text" class="form-control" placeholder="Search your guest"/>
+                                    <input onkeyup="search()" id="search-input" type="text" class="form-control"
+                                        placeholder="Search your guest" />
                                 </div>
                                 <div id="search-result" class="form-control">
 
@@ -270,7 +293,7 @@
         </div>
 
         <script>
-            $(document).ready(()=> {
+            $(document).ready(() => {
                 $("#search-result").hide();
             });
         </script>
