--- a/src/main/resources/templates/ownerviews/base.html
+++ b/src/main/resources/templates/ownerviews/base.html
@@ -5,19 +5,19 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/4.0.0/font/MaterialIcons-Regular.ttf" rel="stylesheet">
 
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"> -->
+    <!-- google font -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
+
+    <!-- bootsrap4 link -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/js/all.min.js"></script>
+
      <!-- Jquery CDN -->
-     <script src="https://code.jquery.com/jquery-3.6.3.min.js"
-     integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+     <!-- <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script> -->
+     <script src="https://code.jquery.com/jquery-3.6.4.slim.min.js" integrity="sha256-a2yjHM4jnF9f54xUQakjZGaqYs/V1CYvWpoqZzC2/Bw=" crossorigin="anonymous"></script>
+
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <link rel="stylesheet" th:href="@{/css/style.css}">
     <link rel="stylesheet" th:href="@{/css/gstyle.css}">
     <title th:text="${title}">Home</title>
@@ -62,36 +62,36 @@
                 <table >
                     <tr>
                         <th>ID</th>
-                        <td th:text="${owner.id}" class="text-muted"></td>
+                        <td th:text="${owner.id}" class="text-muted bg-white text-center" style="border-radius: 8px;"></td>
                     </tr>
                     <tr>
                         <th>Status</th>
-                        <td th:if="${owner.enabled}" class="text-success">Active</td>
-                        <td th:if="${!owner.enabled}" class="text-danger">Deactive</td>
+                        <td th:if="${owner.enabled}" class="text-success px-2">Active</td>
+                        <td th:if="${!owner.enabled}" class="text-danger px-2">Deactive</td>
                     </tr>
                     <tr>
                         <th>Email</th>
-                        <td th:text="${owner.email}"></td>
+                        <td class="px-2" th:text="${owner.email}"></td>
                     </tr>
                     <tr>
                         <th>Mobile</th>
-                        <td th:text="${owner.phoneNo}"></td>
+                        <td class="px-2" th:text="${owner.phoneNo}"></td>
                     </tr>
                     <tr>
                         <th>Occ.</th>
-                        <td th:text="${owner.occupation}"></td>
+                        <td class="px-2" th:text="${owner.occupation}"></td>
                     </tr>
                     <tr>
                         <th>Gender</th>
-                        <td th:text="${owner.gender}"></td>
+                        <td class="px-2" th:text="${owner.gender}"></td>
                     </tr>
                     <tr>
                         <th>DOB</th>
-                        <td th:text="${#dates.format(owner.dob,'dd-MM-yyyy')}"></td>
+                        <td class="px-2" th:text="${#dates.format(owner.dob,'dd-MM-yyyy')}"></td>
                     </tr>
                     <tr>
                         <th>Reg.</th>
-                        <td th:text="${#dates.format(owner.regDate,'dd-MM-yyyy')}"></td>
+                        <td class="px-2" th:text="${#dates.format(owner.regDate,'dd-MM-yyyy')}"></td>
                     </tr>
                     <tr>
                         <th>Add.</th>
@@ -100,25 +100,28 @@
                 </table>
                 <div th:if="${owner.enabled}">
                     <a href="#" class="btn btn-block btn-success"> Edit</a>
-                </div>
-                <div th:if="${!owner.enabled}">
+                </div >
+                <div th:if="${!owner.enabled}" class="text-center">
                     <button type="button" class="btn btn-block btn-warning" data-toggle="modal"
                         data-target="#add-modal"> Add details</button>
                 </div>
             </div>
         </div>
-        <a id="home-link" th:href="@{/owner/dashboard}" class="item active"><i class="fa-sharp fa-solid fa-grid-horizontal"></i>
+        <a id="home-link" th:href="@{/owner/dashboard}" class="item active">
+            <span><i class="fa-solid fa-grid-horizontal"></i></span>
             Dashboard</a>
         <a id="profile-link" href="#" class="item"><i class="fa-solid fa-user"></i> Profile</a>
         <a id="settings-link" href="#" class="item"><i class="fa-solid fa-gear"></i> Settings</a>
         <a th:href="@{/logout}" class="item"><i class="fa-solid fa-sign-out-alt"></i> LogOut</a>
     </div>
+    <!-- <div style="width: 50%; margin-top: 5rem; margin-right: 20wh; padding-left: 20;">
+        <i onclick="toggleSidebar()" class="fas fa-bars m-3" ></i>
+    </div> -->
     <!-- Ending of sidebar -->
 
     <!-- Starting of content area -->
     <div class="content">
-        <i onclick="toggleSidebar()" class="fas fa-bars m-3"></i>
-
+        <i onclick="toggleSidebar()" class="fas fa-bars m-3" style="margin-top: 5rem;"></i>
         <!-- Alert message -->
         <div th:if="${success}" class="alert alert-success text-center" role="alert" th:text="${success}"></div>
         <div th:if="${error}" class="alert alert-danger text-center" role="alert" th:text="${error}"></div>
