--- a/src/main/resources/templates/ownerviews/ownerdash.html
+++ b/src/main/resources/templates/ownerviews/ownerdash.html
@@ -10,7 +10,7 @@
 
 <body>
     <section>
-        <div class="container-fluid p-3">
+        <div class="container-fluid">
             <!-- <h1 class="text-center">Dashboard</h1> -->
             <div class="row">
                 <div class="col-lg-4 col-md-6">
@@ -19,7 +19,7 @@
                             <span class="material-icons-sharp text-center">currency_rupee</span>
                             <h1 class="text-center">Amount</h1>
                         </div>
-                        <h1 class="text-center">20,000</h1>
+                        <h1 class="text-center" th:text="${owner.totalRentcollected}"> </h1>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
@@ -28,7 +28,7 @@
                             <span class="material-icons-sharp text-center">group</span>
                             <h1 class="text-center">Guests</h1>
                         </div>
-                        <h1 class="text-center text-white">20</h1>
+                        <h1 class="text-center text-white" th:text="${owner.totalGuest}">20</h1>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
@@ -168,11 +168,11 @@
                                 <h2 class="text-muted" style="font-weight: 600;">Recent Payments</h2>
                             </div>
 
-                            <div th:if="${trans == null || trans.size() == 0}" class="container-fluid text-center">
+                            <div th:if="${trans == null || trans.getSize() == 0}" class="container-fluid text-center">
                                 <h2 class="text-danger">You have no recent payments</h2>
                             </div>
 
-                            <div class="container text-center mt-2" th:if="${trans != null || trans != 0}">
+                            <div class="container text-center mt-2" th:if="${trans != null && trans != 0}">
                                 <table>
                                     <thead>
                                         <tr>
@@ -188,12 +188,12 @@
                                         <tr th:each="tr : ${trans}">
                                             <td th:text="${tr.payments.id}"></td>
                                             <td
-                                                th:classappend="${tr.payments.status.equals('failed') ? 'text-danger' : 'text-success'}">
-                                                <span th:text="${tr.payments.status}"></span>
+                                                th:classappend="${!tr.payments.status ? 'text-danger' : 'text-success'}">
+                                                <span th:text="${tr.payments.status ? 'Success' : 'Failed'}"></span>
                                             </td>
                                             <td th:text="${tr.payments.refNo}"></td>
                                             <td th:text="${tr.payments.gateway}"></td>
-                                            <td th:classappend="${tr.payments.status.equals('failed') ? 'text-danger' : 'text-success'}"
+                                            <td th:classappend="${!tr.payments.status ? 'text-danger' : 'text-success'}"
                                                 style="font-weight: 700;">
                                                 <span th:text="${tr.payments.amount}"></span>
                                             </td>
