--- a/src/main/resources/templates/ownerviews/pgdetails.html
+++ b/src/main/resources/templates/ownerviews/pgdetails.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <section>
-        <div class="container-fluid text-center">
+    <section class="mt-5" style="margin-top: 10; padding-top: 10;">
+        <div class="container-fluid text-center mt-5">
 
             <div class="row">
                 <div class="col">
