--- a/src/main/resources/templates/ownerviews/pgdetails.html
+++ b/src/main/resources/templates/ownerviews/pgdetails.html
@@ -36,7 +36,7 @@
                                 </tr> -->
                                 <tr>
                                     <th>Registered</th>
-                                    <td th:text="${#dates.format(pg.regDate,'dd-MM-yyyy')}"></td>
+                                    <td th:text="${#temporals.format(pg.regDate,'dd-MM-yyyy')}"></td>
                                 </tr>
 
                             </table>
