--- a/src/main/resources/templates/guestviews/guestpage.html
+++ b/src/main/resources/templates/guestviews/guestpage.html
@@ -68,13 +68,13 @@
                             </tr>
                             <tr>
                                 <th>DOB</th>
-                                <td th:text="${#dates.format(guest.dob,'dd-MM-yyyy')}"></td>
+                                <td th:text="${#temporals.format(guest.dob,'dd-MM-yyyy')}"></td>
                             </tr>
                             
                             
                             <tr>
                                 <th>Registered on</th>
-                                <td th:text="${#dates.format(guest.regDate,'dd-MM-yyyy')}">
+                                <td th:text="${#temporals.format(guest.regDate,'dd-MM-yyyy')}">
                                     <span th:text="${#dates.hour(guest.regDate)}"></span>
                                 </td>
                             </tr>
@@ -136,7 +136,7 @@
                                     style="font-weight: 700;">
                                         <span th:text="${pay.amount}" ></span>
                                     </td>
-                                    <td th:text="${#dates.format(pay.date,'dd-MM-yyyy')}"></td>
+                                    <td th:text="${#temporals.format(pay.date,'dd-MM-yyyy')}"></td>
                                 </tr>
                             </tbody>
                         </table>
@@ -170,7 +170,7 @@
                                 </tr>
                                 <tr>
                                     <th>Registered</th>
-                                    <td th:text="${#dates.format(guest.pgDetails.regDate,'dd-MM-yyyy')}"></td>
+                                    <td th:text="${#temporals.format(guest.pgDetails.regDate,'dd-MM-yyyy')}"></td>
                                 </tr>
                                 <tr>
                                     <th>Profile</th>
@@ -336,7 +336,7 @@
                                     <div>
                                         <button type="submit" id="submit-btn" class="btn btn-block btn-success">Save</button>
                                     </div>
-                                </form>
+                                </form>s
                             </div>
                         </div>
                     </div>
