--- a/src/main/resources/templates/ownerviews/ownerdash.html
+++ b/src/main/resources/templates/ownerviews/ownerdash.html
@@ -104,6 +104,32 @@
 
                 <!-- colume 2 -->
                 <div class="col-lg-6 col-sm-12">
+
+                    <!-- <div class="mt-2">
+                        <div class="row">
+                            <div class="col">
+                                <div class="card custom-primary" >
+                                    <form action="#">
+                                
+                                <div class="search-container input-group">
+                                    <div class="input-group-prepend">
+                                        <div class="input-group-text">
+                                            <i class="fa-solid fa-magnifying-glass"></i>
+                                        </div>
+                                    </div>
+                                    <input type="text" class="form-control"
+                                        placeholder="Search your guest" />
+                                </div>
+                                <div id="search-result" class="form-control">
+
+                                </div>
+                            </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div> -->
+
                     <div class="row">
                         <!-- Graph-1 -->
                         <div class="col-lg-6 col-sm-12">
